5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1590_2894.log
== TEST (2019-04-08 08:20:22) 
-- CODE:
var1 = 90*8
var2 = 45

# Leitura das entradas e conversao para float:
????? = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 5
    ????? = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:34:58) 
-- CODE:
var1 = 90*8
var2 = 45

input(var1+var2)
????? = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 5
    ????? = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:38:44) 
-- CODE:
var1 = input (89.99 * 8)
var2 = input (45)


var3 = float(input("var1 + var2"))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 8
    total = ?????
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:46:06) 
-- CODE:
var1 = input (89.99)
var2 = input (84.50)
var3 = input (54.50)
var4 = input (75.80)
var5 = input (90.00)
var6 = input (50.45)
var7 = input (30.35)
var8 = input (80.50)

var9 = float(input("var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8 + 45"))

total = input(var9)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = input (84.50)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:47:17) 
-- CODE:
var1 = input (89.99)
var2 = input (84.50)
var3 = input (54.50)
var4 = input (75.80)
var5 = input (90.00)
var6 = input (50.45)
var7 = input (30.35)
var8 = input (80.50)

var9 = float(input("var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8 + 45"))

total == input(var9)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = input (84.50)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:48:58) 
-- CODE:
var1 = input (89.99)
var2 = input (89.99)
var3 = input (89.99)
var4 = input (89.99)
var5 = input (89.99)
var6 = input (89.99)
var7 = input (89.99)
var8 = input (89.99)

var9 = float(input("var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8 + frete"))

total == input(var9)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = input (89.99)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:10:30) 
-- CODE:
var1 = input (89.99 * 8)
var8 = input (89.99)

var9 = float(input("var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8 + frete"))

total == input(var9)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var8 = input (89.99)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 12:10:35) 
-- CODE:
var1 = input (89.99 * 8)
var8 = input (89.99)

var9 = float(input("var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8 + frete"))

total == input(var9)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.128279
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2894/main.py", line 2, in <module>
    var8 = input (89.99)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:10:51) 
-- CODE:
var1 = 8
var2 = input (num = 89.99)
var3 = 45

compra = float(input("var1 * var2 + 45"))

total = input(compra)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = input (num = 89.99)
TypeError: input() takes no keyword arguments
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:11:03) 
-- CODE:
var1 = 8
var2 = (num = 89.99)
var3 = 45

compra = float(input("var1 * var2 + 45"))

total = input(compra)

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 2
    var2 = (num = 89.99)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:11:16) 
-- CODE:
var1 = 8
var2 = 89.99)
var3 = 45

compra = float(input("var1 * var2 + 45"))

total = input(compra)

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 2
    var2 = 89.99)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:11:21) 
-- CODE:
var1 = 8
var2 = 89.99
var3 = 45

compra = float(input("var1 * var2 + 45"))

total = input(compra)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total = input(compra)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:11:37) 
-- CODE:
var1 = 8
var2 = 89.99
var3 = 45

compra = float(input(var1 * var2 + 45))

total = input(compra)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total = input(compra)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:11:40) 
-- CODE:
var1 = 8
var2 = 89.99
var3 = 45

compra = float(input(var1 * var2 + 45))

total = input(compra)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total = input(compra)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 12:11:42) 
-- CODE:
var1 = 8
var2 = 89.99
var3 = 45

compra = float(input(var1 * var2 + 45))

total = input(compra)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.161915
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2894/main.py", line 7, in <module>
    total = input(compra)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:20:35) 
-- CODE:
var1 = input (8)
var2 = input (89.99)
var3 = input (45)

compra = float(input(var1 * var2 + 45))

total = input(compra)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = input (89.99)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:22:59) 
-- CODE:
var1 = input (8)
var2 = input (89.99)
var3 = input (45)

compra = float(input(var1 * var2 + 45))

total = compra

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = input (89.99)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 12:23:01) 
-- CODE:
var1 = input (8)
var2 = input (89.99)
var3 = input (45)

compra = float(input(var1 * var2 + 45))

total = compra

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.088547
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2894/main.py", line 2, in <module>
    var2 = input (89.99)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:23:13) 
-- CODE:
var1 = input (8)
var2 = input (89.99)
var3 = input (45)

compra = float(input(var1 * var2 + 45))

total = compra

# Impressao do valor total:
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = input (89.99)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:25:25) 
-- CODE:
var1 = input (8)
var2 = input (89.99)
var3 = input (45)

compra = float(input var1 * var2 + 45)

total = compra

# Impressao do valor total:
print (total)
-- ERROR:
File "XXXX", line 5
    compra = float(input var1 * var2 + 45)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:25:35) 
-- CODE:
var1 = input (8)
var2 = input (89.99)
var3 = input (45)

compra = float(var1 * var2 + 45)

total = compra

# Impressao do valor total:
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = input (89.99)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
